--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
+Hiiiii
+<!-- <div>{{var | slice: 3:-3}}</div> -->
