--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,5 +10,7 @@
   </div>
 
   <div *ngIf=""></div>
-  <button type="submit" [disabled]="loginForm.invalid">Sign In</button>
+  <button type="submit" [disabled]="loginForm.invalid" class="btn btn-light">Sign In
+    <div class="spinner-border"></div>
+  </button>
 </form>
