--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<!-- <router-outlet></router-outlet> -->
-Hiiiii
+<router-outlet></router-outlet>
+
 <!-- <div>{{var | slice: 3:-3}}</div> -->
