changes for View

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -23,11 +23,13 @@
   </div>
   <!-- <button (click)="navigateToView()">VIew</button> -->
 
-  <div class="col-md-5">
+  <div class="col-md-8">
     <app-message-list>
       <!-- This is the projected content for app message app-message-list -->
       <app-message [message]="title"></app-message>
       <app-message #tempMessage [message]="title"></app-message>
+      <app-message [message]="title"></app-message>
+      <app-message [message]="title"></app-message>
       <app-message [message]="title"></app-message>
 
 
